--- a/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/AndroidManifest.xml
+++ b/Code/AudioPlayersDemos/Android-Media-Player/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name=".PlayerApp"
         android:allowBackup="true"
@@ -26,7 +29,9 @@
         </activity>
 
         <service android:name=".service.PlayerService"
-                 android:process=":playerprocess"/>
+                 android:process=":playerprocess"
+                 android:foregroundServiceType="shortService"
+                 android:exported="false"/>
 
     </application>
 
